Final dockerfile setup