@@ -1,22 +1,20 @@
 package pt.photuseretratus.webApp.apis;
 
 import com.google.gson.Gson;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import net.lingala.zip4j.ZipFile;
-import net.lingala.zip4j.model.ZipParameters;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import pt.photuseretratus.webApp.services.Email;
-import pt.photuseretratus.webApp.services.ImageKitService;
-import pt.photuseretratus.webApp.services.Security;
+import pt.photuseretratus.webApp.configuration.AppConfiguration;
 import pt.photuseretratus.webApp.dtos.FormLayout;
 import pt.photuseretratus.webApp.dtos.RequestToken;
+import pt.photuseretratus.webApp.services.EmailService;
+import pt.photuseretratus.webApp.services.ImageKitService;
+import pt.photuseretratus.webApp.services.Security;
 
-import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -24,7 +22,13 @@ import java.util.List;
 
 @RestController
 @Slf4j
+@AllArgsConstructor
 public class Controller {
+
+    private ImageKitService imageKitService;
+    private EmailService email;
+    private AppConfiguration configuration;
+    private Security security;
 
     private HttpHeaders getHttpHeader(MediaType mediaType) {
         HttpHeaders httpHeaders = new HttpHeaders();
@@ -39,7 +43,6 @@ public class Controller {
             consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<String> getUrl(@RequestBody RequestToken requestToken) {
         try {
-            ImageKitService imageKitService = new ImageKitService();
             return new ResponseEntity<>(imageKitService.getURL(requestToken), getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
         } catch (Exception e) {
             log.error(e.toString());
@@ -54,7 +57,6 @@ public class Controller {
             consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<List<String>> getFolder(@RequestBody RequestToken requestToken) {
         try {
-            ImageKitService imageKitService = new ImageKitService();
             return new ResponseEntity<>(imageKitService.getFolder(requestToken), getHttpHeader(MediaType.APPLICATION_JSON), HttpStatus.OK);
         } catch (Exception e) {
             log.error(e.toString());
@@ -69,8 +71,7 @@ public class Controller {
             consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<List<String>> getUserFolders(@RequestBody RequestToken requestToken) {
         try {
-            requestToken.setPath("Reportagens/" + Security.getTokenSubject(requestToken.getToken()) + "/");
-            ImageKitService imageKitService = new ImageKitService();
+            requestToken.setPath("Reportagens/" + security.getTokenSubject(requestToken.getToken()) + "/");
             return new ResponseEntity<>(imageKitService.getFoldersNames(requestToken), getHttpHeader(MediaType.APPLICATION_JSON), HttpStatus.OK);
         } catch (Exception e) {
             log.error(e.toString());
@@ -85,48 +86,9 @@ public class Controller {
             consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<String> Contact(@ModelAttribute FormLayout formLayout) {
 
+        log.info(configuration.getImagekit().get("url"));
         try {
-            ArrayList<File> filesToDelete = new ArrayList<>();
-            Email eMail = new Email();
-
-            eMail.setRecipientCC(formLayout.getEmail());
-
-            eMail.setBodyIntroduction(formLayout.getName(), formLayout.getEmail(), formLayout.getPhone());
-
-            switch (formLayout.getSubject()) {
-                case "Orçamento":
-                    eMail.setSubject("Orçamento para um " + formLayout.getEventType());
-                    eMail.addToBody("<p><b>Tipo de evento: </b>" + formLayout.getEventType() + " " + formLayout.getPricingPlan() + "</p>");
-                    break;
-
-                case "Impressao":
-                    eMail.setSubject("Impressão de fotografias");
-                    break;
-                case "Outro":
-                    eMail.setSubject(formLayout.getOtherSubject());
-                    break;
-            }
-
-            eMail.addToBody("<p><b>Corpo da mensagem: </b>" + formLayout.getText() + "</p>");
-            if (formLayout.getFiles() != null) {
-                for (int i = 0; i < formLayout.getFiles().length; i++) {
-
-                    ZipFile zipFile = new ZipFile("/var/www/html/photuseretratus.pt/uploads/" + formLayout.getSize() + ".zip");
-                    ZipParameters zipParameters = new ZipParameters();
-                    zipParameters.setFileNameInZip(formLayout.getFiles()[i].getOriginalFilename());
-                    zipFile.addStream(formLayout.getFiles()[i].getInputStream(), zipParameters);
-                    eMail.addAttachment(zipFile.getFile());
-                    filesToDelete.add(zipFile.getFile());
-
-                }
-            }
-            eMail.send();
-
-            for (File f : filesToDelete) {
-                if (!f.delete()) {
-                    System.out.println("Could not delete " + f.getName());
-                }
-            }
+            email.sendEmail(formLayout);
         } catch (Exception e) {
             log.error(e.toString());
             return new ResponseEntity<>("Erro a submeter por favor tente novamente", getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.BAD_REQUEST);
@@ -144,14 +106,14 @@ public class Controller {
         RequestToken user;
         Gson gson = new Gson();
         try {
-            Path path = Path.of("/var/www/html/photuseretratus.pt/contas/" + requestToken.getUser() + ".json");
-            user = gson.fromJson(Security.decrypt(Files.readString(path)), RequestToken.class);
+            Path path = Path.of(configuration.getDatabase().get("path") + requestToken.getUser() + ".json");
+            user = gson.fromJson(security.decrypt(Files.readString(path)), RequestToken.class);
         } catch (Exception e) {
             log.error(e.toString());
             return new ResponseEntity<>("Utilizador ou password errados", getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.NOT_FOUND);
         }
         if (user.getPass().equals(requestToken.getPass())) {
-            return new ResponseEntity<>(Security.tokenBuilder(user), getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
+            return new ResponseEntity<>(security.tokenBuilder(user), getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
         } else {
             return new ResponseEntity<>("Utilizador ou password errados", getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.UNAUTHORIZED);
         }
@@ -165,9 +127,11 @@ public class Controller {
     public ResponseEntity<String> Register(@ModelAttribute RequestToken requestToken) {
         Gson gson = new Gson();
         try {
-            if (Security.getTokenAdminStatus(requestToken.getToken())) {
-                Path path = Path.of("/var/www/html/photuseretratus.pt/contas/" + requestToken.getUser() + ".json");
-                Files.write(path, Security.encrypt(gson.toJson(requestToken)).getBytes(StandardCharsets.UTF_8));
+            Path path = Path.of(configuration.getDatabase().get("path") + requestToken.getUser() + ".json");
+            Files.writeString(path, security.encrypt(gson.toJson(requestToken)));
+            if (security.getTokenAdminStatus(requestToken.getToken())) {
+                //path = Path.of(configuration.getDatabase().get("path") + requestToken.getUser() + ".json");
+                Files.writeString(path, security.encrypt(gson.toJson(requestToken)));
                 ProcessBuilder processBuilder = new ProcessBuilder();
                 processBuilder.command("sh", "/var/www/html/photuseretratus.pt/createFolder.sh", System.getenv("IMAGEKITIOPRIV"), requestToken.getUser()).start();
                 return new ResponseEntity<>("Registado com sucesso", getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
@@ -188,7 +152,7 @@ public class Controller {
     public ResponseEntity<String> VerifyAdmin(@RequestBody RequestToken requestToken) {
 
         try {
-            return new ResponseEntity<>(String.valueOf(Security.getTokenAdminStatus(requestToken.getToken())), getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
+            return new ResponseEntity<>(String.valueOf(security.getTokenAdminStatus(requestToken.getToken())), getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.OK);
         } catch (Exception e) {
             log.error(e.toString());
             return new ResponseEntity<>("Erro a verificar direitos de admin", getHttpHeader(MediaType.TEXT_PLAIN), HttpStatus.BAD_REQUEST);
